Refactor: Update domain from ask2ask.uk to ask2ask.com and reorganize documentation directory
This commit performs the following changes:
- Replaces all occurrences of 'ask2ask.uk' with 'ask2ask.com' across the codebase.
- Reorganizes the 'docs' directory into logical subdirectories (api, asn-ping, tracking, zkp, misc).
- Creates an 'index.md' file in the 'docs' directory to serve as a central table of contents and landing page.

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,4 @@
-ask2ask.uk {
+ask2ask.com {
     # Reverse proxy to ASP.NET Core app
     reverse_proxy ask2ask-app:8080 {
         # Health check
@@ -53,4 +53,3 @@ ask2ask.uk {
     # Automatic HTTPS with Let's Encrypt
     # Caddy will automatically obtain and renew certificates
 }
-
